--- a/variables.html
+++ b/variables.html
@@ -9,5 +9,6 @@
   <body>
     <script src="variables.js"></script>
     <script src="variables1.js"></script>
+    <script src="functions.js"></script>
   </body>
 </html>
