--- a/variables.html
+++ b/variables.html
@@ -10,5 +10,6 @@
     <script src="variables.js"></script>
     <script src="variables1.js"></script>
     <script src="functions.js"></script>
+    <script src="functions1.js"></script>
   </body>
 </html>
