feat: aplicant concept object

--- a/variables.html
+++ b/variables.html
@@ -7,9 +7,6 @@
     <title>variables</title>
   </head>
   <body>
-    <script src="variables.js"></script>
-    <script src="variables1.js"></script>
-    <script src="functions.js"></script>
-    <script src="functions1.js"></script>
+    <script src="object.js"></script>
   </body>
 </html>
