feat: structures of control

--- a/variables.html
+++ b/variables.html
@@ -7,6 +7,6 @@
     <title>variables</title>
   </head>
   <body>
-    <script src="comparacion.js"></script>
+    <script src="condicional.js"></script>
   </body>
 </html>
